@@ -3,16 +3,8 @@ package com.example.music.ServiceImpl;
 import com.example.music.Objects.YoutubeApiResponse;
 import com.example.music.Objects.Item;
 import com.example.music.Services.YoutubeService;
-import com.example.music.entity.PlaylistEntry;
-import com.example.music.entity.User;
-import com.example.music.repository.PlaylistEntryRepository;
-import com.example.music.repository.YoutubeVideoRepository;
-import com.example.music.utils.UserContextHolder;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import org.slf4j.Logger;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.boot.autoconfigure.security.SecurityProperties;
 import org.springframework.core.io.InputStreamResource;
 import org.springframework.stereotype.Service;
 import com.example.music.entity.YoutubeVideo;
@@ -22,9 +14,9 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Objects;
 import java.util.stream.Collectors;
 import org.springframework.context.annotation.PropertySource;
 
@@ -32,21 +24,14 @@ import org.springframework.context.annotation.PropertySource;
 @PropertySource("classpath:secrets.properties")
 public class YoutubeServiceImpl implements YoutubeService {
 
-    @Autowired
-    private PlaylistEntryRepository playlistEntryRepository;
-
-    @Autowired
-    private YoutubeVideoRepository youtubeVideoRepository;
-
     @Value("${youtube.api.key}")
     private String apiKey;
     public List<YoutubeVideo> fetchVideos(String keyword) {
-//        System.out.println(apiKey);
         String apiUrl = "https://www.googleapis.com/youtube/v3/search";
         List<YoutubeVideo> videos = new ArrayList<>();
         try {
-            String encodedKeyword = URLEncoder.encode(keyword, "UTF-8");
-            int n=2;
+            String encodedKeyword = URLEncoder.encode(keyword, StandardCharsets.UTF_8);
+            int n=10;
             String queryUrl = String.format(
                     "%s?q=%s&part=snippet&type=video&maxResults="+Integer.toString(n)+"&key=%s",
                     apiUrl, encodedKeyword, apiKey
@@ -55,21 +40,15 @@ public class YoutubeServiceImpl implements YoutubeService {
 
             BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
             String json = reader.lines().collect(Collectors.joining());
-
-//            // Parse JSON response using Jackson (ObjectMapper)
             ObjectMapper objectMapper = new ObjectMapper();
             YoutubeApiResponse response = objectMapper.readValue(json, YoutubeApiResponse.class);
-            // Iterate over the "items" list to extract video details
             for (Item item : response.getItems()) {
                 String title = item.getSnippet().getTitle();
                 String videoId = item.getId().getVideoId();
-
-                // Create YouTubeVideo object and add to the list
                 YoutubeVideo video = new YoutubeVideo();
                 video.setTitle(title);
                 video.setVideoUrl("https://www.youtube.com/watch?v=" + videoId);
                 videos.add(video);
-//                downloadAudio(video.getVideoUrl());
             }
 
         } catch (Exception e) {
@@ -77,24 +56,6 @@ public class YoutubeServiceImpl implements YoutubeService {
         }
         return videos;
     }
-
-//    public void downloadAudio(String videoUrl) {
-//
-//        System.out.println(videoUrl);
-//        String command = String.format("yt-dlp -x --audio-format mp3 -o 'downloads/%%(title)s.%%(ext)s' %s", videoUrl);
-//        System.out.println(command);
-//        Process process = null;
-//        try {
-//            process = Runtime.getRuntime().exec(command);
-//        } catch (IOException e) {
-//            throw new RuntimeException(e);
-//        }
-//        try {
-//            process.waitFor();
-//        } catch (InterruptedException e) {
-//            throw new RuntimeException(e);
-//        }
-//    }
 
     public InputStreamResource streamAudio(String videoUrl) {
         try {
@@ -106,8 +67,7 @@ public class YoutubeServiceImpl implements YoutubeService {
 
             InputStreamResource resource = new InputStreamResource(audioStream);
             long endTime = System.nanoTime();
-            long duration = endTime - startTime;  // Calculate the duration
-            // Convert duration from nanoseconds to seconds
+            long duration = endTime - startTime;
             double durationInSeconds = duration / 1_000_000.0;
             System.out.println("yt-dlp execution time: " + durationInSeconds + " milliseconds");
 
